--- a/main.css/main.css
+++ b/main.css/main.css
@@ -1,8 +1,30 @@
 
 .menu-active:active{
-    background-color: darkgrey;
-}
-body {
-    background-color: mintcream;
+    background-color: ;
 }
 
+.card-body{
+    height: 10rem;
+    background-color:transparent;
+}
+
+@media (max-width: 992px) {
+  .carrusel-servicios {
+    max-width: 100px;
+    margin: 0 auto;
+    background-color: ;
+  }
+
+
+ .carrusel-servicios img {
+    width: 100%;
+    max-height: 50px;
+    object-fit: contain;
+    
+  }
+
+  .carrusel-servicios .text-center a{
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+  }
